--- a/bootstrap.html
+++ b/bootstrap.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Hello Coders</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ICoder</a>
+        <a class="navbar-brand" href="/bootstrap">ICoder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,22 +21,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/bootstrap">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" class="containner" href="about.html">About</a>
+              <a class="nav-link" class="containner" href="/bootstrap/about.html">About</a>
               
             </li>
             
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="/bootstrap" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Subjects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="web.html">Web Development</a>
-                <a class="dropdown-item" href="technology.html">Technology</a>
+                <a class="dropdown-item" href="/bootstrap/web.html">Web Development</a>
+                <a class="dropdown-item" href="/bootstrap/technology.html">Technology</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="contact.html">Contact Us</a>
+                <a class="dropdown-item" href="/bootstrap/contact.html">Contact Us</a>
               </div>
             </li>
           </ul>
