--- a/technology.html
+++ b/technology.html
@@ -33,7 +33,7 @@
                 <div class="card-body d-flex flex-column align-items-start">
                   <strong class="d-inline-block mb-2 text-success">Design</strong>
                   <h3 class="mb-0">
-                    <a class="text-dark" href="#">Post title</a>
+                    <a class="text-dark" href="/bootstrap">Post title</a>
                   </h3>
                   <div class="mb-1 text-muted">Oct 12</div>
                   <p class="card-text mb-auto">Artificial intelligence, sometimes called machine intelligence, is intelligence demonstrated by machines, unlike the natural intelligence displayed by humans and animals..</p>
