--- a/bootstrap.html
+++ b/bootstrap.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Hello Coders</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/bootstrap">ICoder</a>
+        <a class="navbar-brand" href="Priyansh345/bootstrap">ICoder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/bootstrap">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="Priyansh345/bootstrap">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" class="containner" href="/bootstrap/about.html">About</a>
+              <a class="nav-link" class="containner" href="Priyansh345/bootstrap/about.html">About</a>
               
             </li>
             
